# rpay

./: .dockerignore  .gitignore  Cargo.toml  README.adoc  Taskfile.yml  docker-compose.yml
rpay-api/: Cargo.toml
rpay-api/config/: base.yaml
rpay-api/src/: conf.rs  lib.rs  main.rs  startup.rs
rpay-api/src/api/: error.rs  mod.rs
rpay-api/src/api/routes/: mod.rs  rfp.rs  site.rs
rpay-api/tests/: api_route_tests.rs  config_tests.rs  db_tests.rs  email_tests.rs  helper.rs  site_urls_check_tests.rs  sms_tests.rs
rpay-core/: Cargo.toml  Dockerfile
rpay-core/migrations/: 20211113053800_create_merchants_table.down.sql  20211113053800_create_merchants_table.up.sql  20211113054433_create_psp_table.down.sql  20211113054433_create_psp_table.up.sql  20211113054653_create_psp_api_keys_table.down.sql  20211113054653_create_psp_api_keys_table.up.sql  20211113055700_create_psp_features_table.down.sql  20211113055700_create_psp_features_table.up.sql  20211113133800_create_merchant_psp_table.down.sql  20211113133800_create_merchant_psp_table.up.sql
rpay-core/scripts/: init_db.sh
rpay-core/specs/: payments-0.1.yaml
rpay-core/src/: lib.rs  log.rs  vars.rs
rpay-core/src/email/: content.rs  mod.rs  model.rs
rpay-core/src/msg/: mod.rs
rpay-core/src/payment/: mod.rs
rpay-core/src/rfp/: mod.rs  traits.rs
rpay-core/src/rfp/model/: address.rs  consumer.rs  contact_info.rs  currency.rs  email.rs  invoice.rs  metadata.rs  mod.rs  phone.rs
rpay-core/templates/: confirmation_email.html
rpay-core/tests/: stories_payment-request.md
rpay-psp/: Cargo.toml
rpay-psp-stripe/: Cargo.toml
rpay-psp/tests/: rfp_test.rs
