[package]
name = "rpay_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "op_api"
path = "src/lib.rs"

[dependencies]
actix-http = "=3.0.0-rc.1"
actix-rt = "2"
actix-web = "=4.0.0-rc.2"
anyhow = "1.0.51"
base64 = "0.13.0"
cqrs-es = "0.2.4"
config = "0.11"
dotenv = "0.15.0"
rpay_core = { path = "../rpay-core" }
rand = "0.8.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.29"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nats = "0.16.0"
#async-graphql = { version = "2", features = ["chrono", "chrono-tz", "uuid"] }
#async-graphql-actix-web = "2"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
    "decimal"
]
