[package]
name = "rpay_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpay_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.51"
async-graphql = { version = "2", features = ["chrono", "chrono-tz", "uuid"] }
async-graphql-actix-web = "2"
base64 = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
lettre = "0.10.0-rc.3"
nats = "0.15"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
rusty-money = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
    "decimal"
]
