[package]
name = "rpay_psp_stripe"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpay_psp_stripe"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.51"
async-stripe = { version = "0.13", features = ["runtime-tokio-hyper-rustls"] }
config = "0.11"
rpay_core = { path = "../rpay-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
insta = "1.8.0" # snapshot testing